--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -1,3 +1,5 @@
 <h1>Hello, this is stocks index</h1>
-<div><%= @stock %></div>
-<div><%= @chart %></div>
+<div><%= @stock.symbol %></div>
+<div><%= @stock.companyname %></div>
+<div><%#= @chart %></div>
+<div><%#=  %></div>
